Better exceptions for Coverage writes (#417)