@@ -1,17 +1,20 @@
 package gov.va.api.health.vistafhirquery.service.controller;
 
 import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
 
 import gov.va.api.health.fhir.api.Safe;
 import gov.va.api.health.r4.api.datatypes.Identifier;
 import gov.va.api.health.vistafhirquery.service.controller.RequestPayloadExceptions.RequiredIdentifierIsMissing;
 import gov.va.api.health.vistafhirquery.service.controller.RequestPayloadExceptions.UnexpectedNumberOfIdentifiers;
+import gov.va.api.health.vistafhirquery.service.controller.RequestPayloadExceptions.UnknownIdentifierSystem;
 import gov.va.api.lighthouse.charon.models.lhslighthouserpcgateway.LhsLighthouseRpcGatewayCoverageWrite.WriteableFilemanValue;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.Function;
 import lombok.Builder;
 import lombok.NonNull;
 import lombok.Value;
@@ -19,7 +22,7 @@ import lombok.Value;
 @Value
 public class IdentifierReader {
 
-  Map<String, Identifier> identifiersBySystem;
+  Map<String, ReadableIdentifierDefinition> handlersBySystem;
 
   WriteableFilemanValueFactory filemanFactory;
 
@@ -29,49 +32,72 @@ public class IdentifierReader {
   IdentifierReader(
       @NonNull WriteableFilemanValueFactory filemanFactory,
       @NonNull FilemanIndexRegistry indexRegistry,
-      @NonNull Collection<Identifier> identifiers) {
+      @NonNull Collection<ReadableIdentifierDefinition> readableIdentifierDefinitions) {
     this.filemanFactory = filemanFactory;
     this.indexRegistry = indexRegistry;
-    Map<String, Identifier> identifiersBySystem = new HashMap<>(identifiers.size());
-    identifiers.forEach(
-        identifier -> {
-          if (identifiersBySystem.putIfAbsent(identifier.system(), identifier) != null) {
-            var countOfDuplicates =
-                identifiers.stream().filter(i -> i.system().equals(identifier.system())).count();
-            throw UnexpectedNumberOfIdentifiers.builder()
-                .exactExpectedCount(1)
-                .receivedCount((int) countOfDuplicates)
-                .jsonPath(".contained[].identifiers[]")
-                .system("fieldNumber")
-                .identifyingFieldValue(identifier.system())
-                .build();
-          }
-        });
-    this.identifiersBySystem = identifiersBySystem;
+    this.handlersBySystem =
+        readableIdentifierDefinitions.stream()
+            .collect(toMap(ReadableIdentifierDefinition::system, Function.identity()));
   }
 
   /** IdentifierReader processes a given collection of the expected identifier records. */
-  public List<WriteableFilemanValue> process(Collection<IdentifierRecord> records) {
-    return Safe.stream(records)
-        .map(
-            record -> {
-              if (!identifiersBySystem().containsKey(record.system())) {
-                if (record.isRequired()) {
-                  throw RequiredIdentifierIsMissing.builder()
-                      .system(record.system())
-                      .jsonPath(".contained[].identifiers[].value")
-                      .build();
-                }
-                return null;
-              }
-              return filemanFactory()
-                  .forString(
-                      record.fieldNumber(),
-                      indexRegistry().get(record.fieldNumber()),
-                      identifiersBySystem().get(record.system()).value())
-                  .orElse(null);
-            })
-        .filter(Objects::nonNull)
-        .collect(toList());
+  public List<WriteableFilemanValue> process(Collection<Identifier> identifiers) {
+    List<String> allSystems = new ArrayList<>(handlersBySystem().keySet());
+    List<String> requiredSystems =
+        new ArrayList<>(
+            handlersBySystem().values().stream()
+                .filter(ReadableIdentifierDefinition::isRequired)
+                .map(ReadableIdentifierDefinition::system)
+                .toList());
+    var results =
+        Safe.stream(identifiers)
+            .map(
+                identifier -> {
+                  var handler = handlersBySystem().get(identifier.system());
+                  if (handler == null) {
+                    throw UnknownIdentifierSystem.builder()
+                        .jsonPath(".identifier[]")
+                        .system(identifier.system())
+                        .build();
+                  }
+                  if (!allSystems.remove(identifier.system())) {
+                    var duplicateCount =
+                        identifiers.stream()
+                            .filter(e -> identifier.system().equals(e.system()))
+                            .count();
+                    throw UnexpectedNumberOfIdentifiers.builder()
+                        .jsonPath(".identifier[]")
+                        .exactExpectedCount(1)
+                        .receivedCount((int) duplicateCount)
+                        .system(identifier.system())
+                        .build();
+                  }
+                  requiredSystems.remove(identifier.system());
+                  return filemanFactory()
+                      .forString(
+                          handler.field(),
+                          indexRegistry().get(filemanFactory().file()),
+                          identifier.value())
+                      .orElse(null);
+                })
+            .filter(Objects::nonNull)
+            .collect(toList());
+    if (!requiredSystems.isEmpty()) {
+      throw RequiredIdentifierIsMissing.builder()
+          .jsonPath(".identifier[]")
+          .system(requiredSystems.get(0))
+          .build();
+    }
+    return results;
+  }
+
+  @Value
+  @Builder
+  public static class ReadableIdentifierDefinition {
+    @NonNull String system;
+
+    @NonNull String field;
+
+    boolean isRequired;
   }
 }
